<resources>
    <string name="app_name">Smile</string>


    <string name="test_num">123</string>
    <string name="test_text1">秋风</string>
    <string name="test_text2">秋风随着音乐吹来，不柔不猛，掀起了我额前的发梢。</string>
    <string name="test_text3">秋风随着音乐吹来，不柔不猛，掀起了我额前的发梢。已经不再是“迎面不寒杨柳风”的时候了，尽管随它而落的柳叶在翻舞，划出生命中最后一道优美的辞别。纤长的柳条还在摆荡，招手向他道声再见。</string>
    <string name="joke_click_tip">点击查看全图</string>
    <string name="comment_edit_hint">期待你的神评论</string>



    <string name="myWrite_text">我的投稿</string>
    <string name="myCollect_text">我的收藏</string>
    <string name="myComment_text">我的评论</string>
    <string name="setting">设置</string>
    <string name="camera">拍照</string>
    <string name="gallery">照片图库</string>
    <string name="cancle">取消</string>


</resources>
