<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:background="@drawable/item_single_selector"
    android:layout_height="wrap_content">

    <RelativeLayout
        android:id="@+id/camera_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal">

        <ImageView
            android:id="@+id/camera_image"
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:layout_alignParentEnd="true"
            android:layout_alignParentTop="true"
            android:layout_marginRight="30dp"
            android:padding="5dp"
            android:src="@drawable/camera" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="50dp"
            android:layout_marginLeft="30dp"
            android:gravity="center"
            android:text="@string/camera"
            android:textSize="25dp" />
    </RelativeLayout>

    <RelativeLayout
        android:id="@+id/gallery_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/camera_layout"
        android:layout_gravity="center_horizontal">

        <ImageView
            android:id="@+id/gallery_image"
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:layout_alignParentEnd="true"
            android:layout_alignParentTop="true"
            android:layout_marginRight="30dp"
            android:padding="5dp"
            android:src="@drawable/gallery" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="50dp"
            android:layout_marginLeft="30dp"
            android:gravity="center"
            android:text="@string/gallery"
            android:textSize="25dp" />
    </RelativeLayout>

    <View
        android:id="@+id/line_layout"
        android:layout_width="match_parent"
        android:layout_height="2dp"
        android:layout_below="@id/gallery_layout"
        android:background="@color/black" />

    <RelativeLayout
        android:id="@+id/cancel_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/line_layout"
        android:layout_gravity="center_horizontal">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="50dp"
            android:layout_alignParentTop="true"
            android:layout_centerHorizontal="true"
            android:gravity="center"
            android:text="@string/cancle"
            android:textSize="25dp" />
    </RelativeLayout>

</RelativeLayout>