<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/ivory">

    <RelativeLayout
        android:id="@+id/user"
        android:layout_width="match_parent"
        android:layout_height="160dp">

        <ImageView
            android:id="@+id/user_avatar_background"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:elevation="2dp"
            android:scaleType="centerCrop"></ImageView>

        <com.tisen.smile.utils.CircleImageView
            android:id="@+id/user_avatar"
            android:layout_width="80dp"
            android:layout_height="80dp"
            android:layout_marginLeft="10dp"
            android:layout_marginTop="50dp"
            android:elevation="4dp"
            app:border_color="@color/white"
            app:border_width="2dp" />
    </RelativeLayout>


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/user"
        android:orientation="vertical"
        android:padding="5dp">

        <RelativeLayout
            android:id="@+id/menu_my_write"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="5dp">

            <ImageView
                android:layout_width="50dp"
                android:layout_height="50dp"
                android:layout_marginLeft="10dp"
                android:src="@drawable/my_write" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="50dp"
                android:layout_marginLeft="80dp"
                android:gravity="center"
                android:text="@string/myWrite_text"
                android:textSize="25dp" />
        </RelativeLayout>

        <RelativeLayout
            android:id="@+id/menu_my_comment"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="5dp">

            <ImageView
                android:layout_width="50dp"
                android:layout_height="50dp"
                android:layout_marginLeft="10dp"
                android:src="@drawable/my_comment" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="50dp"
                android:layout_marginLeft="80dp"
                android:gravity="center"
                android:text="@string/myComment_text"
                android:textSize="25dp" />
        </RelativeLayout>

        <RelativeLayout
            android:id="@+id/menu_my_collect"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="5dp">

            <ImageView
                android:layout_width="50dp"
                android:layout_height="50dp"
                android:layout_marginLeft="10dp"
                android:src="@drawable/my_collect" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="50dp"
                android:layout_marginLeft="80dp"
                android:gravity="center"
                android:text="@string/myCollect_text"
                android:textSize="25dp" />
        </RelativeLayout>
    </LinearLayout>

    <!--<ListView-->
    <!--android:id="@+id/menu_list"-->
    <!--android:layout_width="match_parent"-->
    <!--android:layout_height="wrap_content"-->
    <!--android:layout_below="@id/user"></ListView>-->
    <RelativeLayout
        android:id="@+id/menu_setting"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:background="@color/beige"
        android:padding="5dp">

        <ImageView
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:layout_marginLeft="10dp"
            android:src="@drawable/setting" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="50dp"
            android:layout_marginLeft="80dp"
            android:gravity="center"
            android:text="@string/setting"
            android:textSize="25dp" />
    </RelativeLayout>

</RelativeLayout>